force-app/main/default/objects/SimulationRequest__e/SimulationRequest__e.object-meta.xml
<CustomObject>
    <label>Simulation Request</label>
    <pluralLabel>Simulation Requests</pluralLabel>
</CustomObject>