force-app/main/default/objects/SimulationRequest__e/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <length>18</length>
    <type>Text</type>
</CustomField>