force-app/main/default/objects/SimulationRequest__e/fields/RecordIds__c.field-meta.xml
<CustomField>
    <fullName>RecordIds__c</fullName>
    <label>RecordIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>