force-app/main/default/objects/SimulationRequest__e/fields/Records__c.field-meta.xml
<CustomField>
    <fullName>Records__c</fullName>
    <label>Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>