force-app/main/default/objects/SimulationRequest__e/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <label>UUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>